# ai_presidentials_2026

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  app.py  pyproject.toml
src/ai_presidentials_2026/: __init__.py  main.py
src/infra/: graph_rag_demo_stack.py
tests/unit/: test_graph_rag_demo_stack.py
